--- a/app/src/main/res/drawable/tab_color_selector.xml
+++ b/app/src/main/res/drawable/tab_color_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/common_google_signin_btn_text_light_default" android:state_selected="true"/>
+    <item android:drawable="@color/extra_light_gray" android:state_selected="true"/>
     <item android:drawable="@color/maroon_dark"/>
 </selector>
