--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_help_outline_white_24dp"
+                    android:src="@drawable/ic_help"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"/>
                 <LinearLayout
