--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -46,7 +46,7 @@
                             android:id="@+id/iconRequest"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_share_24dp"
+                            android:src="@drawable/ic_share"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -73,7 +73,7 @@
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_share_24dp"
+                            android:src="@drawable/ic_like"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -102,7 +102,7 @@
                             android:id="@+id/icon2"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_headset_mic_24dp"
+                            android:src="@drawable/ic_about_us"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -142,7 +142,7 @@
                             android:id="@+id/iconFavourite"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_help_outline_24dp"
+                            android:src="@drawable/ic_help_black"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -172,7 +172,7 @@
                             android:id="@+id/iconView"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_headset_mic_24dp"
+                            android:src="@drawable/ic_faq"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -201,7 +201,7 @@
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_help_outline_24dp"
+                            android:src="@drawable/ic_logout"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -240,7 +240,7 @@
                             android:id="@+id/iconterms"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_help_outline_24dp"
+                            android:src="@drawable/ic_terms_condition"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
@@ -276,7 +276,7 @@
                             android:id="@+id/iconAccessibility"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_help_outline_24dp"
+                            android:src="@drawable/ic_accessability"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
