--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,42 +99,54 @@
                         android:textColor="@color/white"
                         android:layout_marginVertical="10dp"
                         android:layout_marginHorizontal="10dp"/>
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginHorizontal="2dp"
                         android:background="@color/white"
                         android:layout_marginVertical="2dp"
+                        android:orientation="vertical"
                         android:layout_below="@+id/txtSearchHeader">
                         <com.google.android.material.tabs.TabLayout
+                            style="@style/font_medium_bold"
                             android:id="@+id/tabRuntimeLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:tabMode="fixed"
-                            app:tabTextColor="@color/white"
+                            app:tabTextColor="@color/tab_text_color"
                             app:tabBackground="@drawable/tab_color_selector"
                             android:layout_marginVertical="10dp"
                             app:tabGravity="fill"
                             android:layout_marginHorizontal="10dp"
-                            app:tabIndicatorColor="@color/yellow_light"
+                            app:tabIndicatorColor="@color/maroon_dark"
                             app:tabIndicatorHeight="3dp"
+                            app:tabMaxWidth="0dp"
                             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
-                        <!--<androidx.viewpager.widget.ViewPager
-                            android:id="@+id/viewPagerRuntime"
-                            android:layout_width="fill_parent"
-                            android:layout_height="200dp"
+                        <LinearLayout
+                            android:id="@+id/layoutControlHeader"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="10dp"
                             android:layout_marginHorizontal="10dp"
                             android:layout_below="@+id/tabRuntimeLayout"
-                            android:clipChildren="false"/>-->
+                            android:background="@color/extra_light_gray">
+                            <TextView
+                                style="@style/font_medium_bold"
+                                android:id="@+id/txtHeader"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:textAllCaps="true"
+                                android:gravity="center"
+                                android:textColor="@color/maroon_dark" />
+                        </LinearLayout>
                         <LinearLayout
                             android:id="@+id/runtimeParent"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginVertical="10dp"
-                            android:layout_marginHorizontal="10dp"
-                            android:layout_below="@+id/tabRuntimeLayout"
                             android:orientation="vertical"/>
-                    </RelativeLayout>
+                    </LinearLayout>
                 </RelativeLayout>
         </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
