--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -32,14 +32,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
-                        android:src="@drawable/ic_chevron_left_24dp"/>
+                        android:src="@drawable/ic_arrow_white"/>
                     <ImageView
                         android:id="@+id/imgHelp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="15dp"
                         android:layout_gravity="right"
-                        android:src="@drawable/ic_help_outline_white_24dp"/>
+                        android:src="@drawable/ic_help"/>
                 </FrameLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
