--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,8 @@
                         style="@style/font_medium_bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Search"
+                        android:text="@string/search"
+                        android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:layout_marginVertical="10dp"
                         android:layout_marginHorizontal="10dp"/>
@@ -107,10 +108,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:tabMode="fixed"
+                            app:tabMaxWidth="0dp"
+                            app:tabGravity="fill"
                             app:tabTextColor="@color/white"
                             app:tabBackground="@drawable/tab_color_selector"
                             android:layout_marginVertical="10dp"
-                            app:tabGravity="fill"
                             android:layout_marginHorizontal="10dp"
                             app:tabIndicatorColor="@color/yellow_light"
                             app:tabIndicatorHeight="3dp"
