--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -90,8 +90,8 @@
 
                     <ImageView
                         android:id="@+id/imgSearch"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/ic_search" />
@@ -106,8 +106,8 @@
 
                     <ImageView
                         android:id="@+id/imgBookmark"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/ic_bookmark" />
@@ -135,12 +135,10 @@
         <ListView
             android:id="@+id/fragment_map_searchhistory"
             android:layout_width="120dp"
-
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="145dp"
             android:layout_marginEnd="170dp"
-
             android:alpha=".9"
             android:background="@android:color/white"
             android:visibility="gone"
