1. Map Function bottom sheet changes

--- a/app/src/main/res/layout/adapter_map_function_menu.xml
+++ b/app/src/main/res/layout/adapter_map_function_menu.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
+<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">-->
+    <!--<data>
         <variable
             name="position"
             type="java.lang.Integer" />
         <variable
             name="adapterMapFunctionVM"
             type="dm.sime.com.kharetati.view.viewModels.MapFunctionBottomSheetViewModel" />
-    </data>
+    </data>-->
     <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:elevation="10dp"
@@ -33,7 +35,6 @@
                 android:layout_width="match_parent"
                 android:textSize="15dp"
                 android:layout_height="wrap_content"
-                android:text="@{adapterMapFunctionVM.getCurrentFunctionsOnMap(position).nameEn}"
                 android:fontFamily="@font/dubai_font"
                 android:maxLines="2"
                 android:textAlignment="center"
@@ -41,4 +42,5 @@
                 android:layout_alignParentBottom="true"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
-</layout>
+<!--
+</layout>-->
