--- a/app/src/main/res/layout/adapter_map_function_menu.xml
+++ b/app/src/main/res/layout/adapter_map_function_menu.xml
@@ -12,20 +12,25 @@
     <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:elevation="10dp"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/grid_background_drawable"
+            android:weightSum="1"
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/bookmark"
+                android:layout_weight="0.6"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginVertical="10dp"/>
@@ -33,14 +38,14 @@
                 android:id="@+id/txtFunctionNAme"
                 android:layout_below="@+id/imgMenuIcon"
                 android:layout_width="match_parent"
-                android:textSize="15dp"
+                android:textSize="14sp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dubai_font"
                 android:maxLines="2"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 <!--
 </layout>-->
