--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
@@ -44,6 +45,7 @@
                         android:gravity="start"
                         android:textDirection="locale"
                         android:textAlignment="viewStart"
+                        android:singleLine="true"
                         android:hint="@string/feedback_name"
                         android:maxLength="255"
                         android:inputType="textPersonName"
@@ -61,6 +63,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:textDirection="locale"
+                        android:singleLine="true"
                         android:textAlignment="viewStart"
                         android:maxLength="50"
                         android:hint="@string/email_hint"
@@ -82,6 +85,7 @@
                         android:textDirection="locale"
                         android:textAlignment="viewStart"
                         android:gravity="start"
+                        android:singleLine="true"
                         android:hint="@string/feedback_mobile_number" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -97,6 +101,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="start"
+                        android:inputType="text"
+                        android:singleLine="true"
                         android:hint="@string/subject"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
