--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -102,9 +102,9 @@
                             android:id="@+id/icon2"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-
+                            android:src="@drawable/ic_about_us"
                             android:layout_centerInParent="true"/>
-                        <!--android:src="@drawable/ic_about_us"-->
+                        <!---->
                     </RelativeLayout>
                     <TextView
                         style="@style/font_medium_regular"
@@ -278,7 +278,7 @@
                             android:id="@+id/iconAccessibility"
                             android:layout_width="35dp"
                             android:layout_height="35dp"
-                            android:src="@drawable/ic_accessability"
+                            android:src="@drawable/ic_accessibility"
                             android:layout_centerInParent="true"/>
                     </RelativeLayout>
                     <TextView
