--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -43,7 +43,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="5dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
                 android:weightSum="1.75">
@@ -68,7 +68,7 @@
 
                         <dm.sime.com.kharetati.view.customview.CleanableEditText
                             android:id="@+id/txtPlotNo"
-                            android:layout_width="120dp"
+                            android:layout_width="110dp"
                             android:layout_height="match_parent"
                             android:background="@color/white"
                             android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"
@@ -86,7 +86,7 @@
                     android:layout_marginVertical="10dp"
                     android:layout_weight=".75"
                     android:orientation="horizontal"
-                    android:weightSum="5">
+                    android:weightSum="6">
 
                     <ImageView
                         android:id="@+id/imgSearch"
@@ -127,6 +127,14 @@
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
                         android:src="@drawable/makani" />
+
+                    <ImageView
+                        android:id="@+id/imgHelp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="start|center_vertical"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_help_black" />
                 </LinearLayout>
 
             </LinearLayout>
