--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,26 +36,26 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:singleLine">true</item>
-        <item name="font">@font/dubai_font</item>
+        <item name="android:fontFamily">@font/dubai_font</item>
     </style>
     <style name="font_medium_regular">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:singleLine">true</item>
-        <item name="font">@font/dubai_font</item>
+        <item name="android:fontFamily">@font/dubai_font</item>
     </style>
     <style name="font_large_bold">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:singleLine">true</item>
-        <item name="font">@font/dubai_font</item>
+        <item name="android:fontFamily">@font/dubai_font</item>
     </style>
     <style name="font_extra_large_bold">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:singleLine">true</item>
-        <item name="font">@font/dubai_font</item>
+        <item name="android:fontFamily">@font/dubai_font</item>
     </style>
 </resources>
