--- a/app/src/main/res/drawable/border_background.xml
+++ b/app/src/main/res/drawable/border_background.xml
@@ -2,14 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <gradient
-        android:angle="270"
-        android:endColor="#ffffff"
-        android:startColor="#ffffff" />
+    <solid android:color="#940e2a" />
 
     <corners android:radius="5dp" />
 
-    <stroke
-        android:width="2dp"
-        android:color="#940e2a" />
 </shape>
