--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -34,6 +34,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginVertical="10dp"/>
             <TextView
+                android:id="@+id/txtMenuName"
                 android:layout_below="@+id/imgMenuIcon"
                 android:layout_width="wrap_content"
                 android:textSize="12sp"
