--- a/app/src/main/res/layout/bottomsheet_web_view.xml
+++ b/app/src/main/res/layout/bottomsheet_web_view.xml
@@ -4,32 +4,36 @@
     android:id="@+id/bottomSheet"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white"
     app:behavior_peekHeight="0dp"
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-    <RelativeLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <View
-            android:id="@+id/topView"
-            android:layout_margin="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="200dp"
-            android:layout_height="2dp"
-            android:background="@color/maroon_dark"/>
-        <!--<view
-            android:id="@+id/topView"
-            android:layout_margin="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="200dp"
-            android:layout_height="2dp"
-            android:background="@color/material_blue_500"/>-->
-        <WebView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/webView"
-            android:layout_below="@+id/topView"/>
-    </RelativeLayout>
+            android:layout_height="match_parent">
+            <View
+                android:id="@+id/topView"
+                android:layout_margin="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="200dp"
+                android:layout_height="2dp"
+                android:background="@color/maroon_dark"/>
+            <!--<view
+                android:id="@+id/topView"
+                android:layout_margin="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="200dp"
+                android:layout_height="2dp"
+                android:background="@color/material_blue_500"/>-->
+            <WebView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/webView"
+                android:layout_below="@+id/topView"/>
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
