--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -72,13 +72,13 @@
                             android:layout_width="110dp"
                             android:layout_height="match_parent"
                             android:background="@color/white"
-                            android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"
                             android:gravity="center_vertical|center_horizontal"
                             android:hint="-  -  -  -  -  -  -"
-                            android:inputType="number"
                             android:maxLength="20"
                             android:textSize="16sp" />
-
+                    <!--android:imeOptions="actionDone"
+                    android:inputType="text"-->
+                   <!-- android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
                 </LinearLayout>
 
                 <LinearLayout
